save button visible only for logged users

--- a/wp-content/themes/aigi/assets/css/single-event-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-event-styles.css
@@ -188,7 +188,7 @@
     /*max-width: 190px;*/
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 .post-technical-block.bordered {
