--- a/wp-content/themes/aigi/assets/css/header-footer-styles.css
+++ b/wp-content/themes/aigi/assets/css/header-footer-styles.css
@@ -131,7 +131,7 @@ input[type="text"].facetwp-search {
     position: relative;
 }
 a.main_menu_top.has_sub:after {
-    content: '';
+    /*content: '';*/
     border: 4px solid transparent;
     border-top: 4px solid white;
     display: inline-block;
@@ -139,9 +139,38 @@ a.main_menu_top.has_sub:after {
     top: 5px;
     right: 25px;
 }
+.main-menu__link-arrow {
+	width: 60px;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: contain;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transition: all .2s;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.main-menu__link-arrow img {
+	transform: rotate(90deg);
+	width: 15px;
+	height: 10px;
+	/* position: absolute; */
+	top: 20px;
+	right: 10px;
+	transition: all .2s;
+}
+.main-menu__link-arrow.open img {
+	transform: rotate(-90deg);
+	top: 19px;
+}
+
 .main_menu_submenu_overlay {
 	display: none;
-	position: absolute;
+	/*position: absolute;*/
+	position: fixed;
 	background: white;
 	z-index: 99;
     min-height: 200px;
@@ -178,6 +207,10 @@ a.main_menu_top.has_sub:after {
     left: 50%;
     display: block;
     position: absolute;
+}
+
+.main_menu_item {
+	position: relative;
 }
 #header .submenu_img {
     display: flex;
@@ -690,6 +723,7 @@ p.image_description {
 		margin-top: 0px;
 		top: 0px;
 		border: unset;
+		position: absolute;
 	}
 	.main_menu_item.has_sub.submenu_opened {
 		position: unset;
