--- a/wp-content/themes/aigi/assets/css/post-tile-styles.css
+++ b/wp-content/themes/aigi/assets/css/post-tile-styles.css
@@ -179,6 +179,8 @@
     letter-spacing: 0.02em;
     color: var(--color-brand-navy-primary);
     margin-bottom: 8px;
+    text-decoration: none;
+    display: inline-block;
 }
 .post-tile__excerpt {
     font-weight: normal;
@@ -200,6 +202,9 @@
 .landing-page .post-tile__wrap.event .post-tile__img-box {
     width: 49%;
     max-width: 268px;
+}
+.post-tile__img-box .btn-group {
+    margin: unset;
 }
 .post-tile__img-box  .post-tile__img {
     width: 100%;
