902207882 [AIGI] Toolkit UAT (Dropdowns) - made menu links uncklicable

--- a/wp-content/themes/aigi/assets/css/toolkit-styles.css
+++ b/wp-content/themes/aigi/assets/css/toolkit-styles.css
@@ -49,6 +49,9 @@ ul.toolkit-menu__list > li:before {
     align-items: center;
     justify-content: center;
 }
+.toolkit-menu__wrap .toolkit-menu__link-arrow {
+    width: 100%;
+}
 .toolkit-menu__link-arrow img {
     transform: rotate(90deg);
     width: 20px;
