--- a/wp-content/themes/aigi/assets/css/toolkit-styles.css
+++ b/wp-content/themes/aigi/assets/css/toolkit-styles.css
@@ -397,6 +397,7 @@ ul.toolkit-menu__list > li:before {
     .main-toolkit-landing-inner .col-sidebar {
         padding-left: 0;
         padding-right: 0;
+        padding-top: 30px;
     }
     .toolkit-menu__wrap {
         border: 1px solid var(--color-field-border);
