--- a/wp-content/themes/aigi/assets/css/header-footer-styles.css
+++ b/wp-content/themes/aigi/assets/css/header-footer-styles.css
@@ -131,7 +131,7 @@ input[type="text"].facetwp-search {
     position: relative;
 }
 a.main_menu_top.has_sub:after {
-    /*content: '';*/
+    content: '';
     border: 4px solid transparent;
     border-top: 4px solid white;
     display: inline-block;
@@ -169,8 +169,8 @@ a.main_menu_top.has_sub:after {
 
 .main_menu_submenu_overlay {
 	display: none;
-	/*position: absolute;*/
-	position: fixed;
+	position: absolute;
+	/*position: fixed;*/
 	background: white;
 	z-index: 99;
     min-height: 200px;
@@ -181,7 +181,8 @@ a.main_menu_top.has_sub:after {
     border-bottom: 6px solid;
     border-color: var(--color-brand-m-blue-primary);
 }
-#header .submenu_opened a.main_menu_top.has_sub {
+#header .submenu_opened a.main_menu_top.has_sub,
+#header .main_menu_item:hover a.main_menu_top {
 	color: var(--color-h-secondary-blue);
 }
 .submenu_opened a.main_menu_top.has_sub:after {
@@ -209,9 +210,9 @@ a.main_menu_top.has_sub:after {
     position: absolute;
 }
 
-.main_menu_item {
-	position: relative;
-}
+/*.main_menu_item {*/
+/*	position: relative;*/
+/*}*/
 #header .submenu_img {
     display: flex;
     width: 328px;
