--- a/wp-content/themes/aigi/assets/css/header-footer-styles.css
+++ b/wp-content/themes/aigi/assets/css/header-footer-styles.css
@@ -135,9 +135,11 @@ a.main_menu_top.has_sub:after {
     border: 4px solid transparent;
     border-top: 4px solid white;
     display: inline-block;
-    position: absolute;
-    top: 5px;
-    right: 25px;
+    /*position: absolute;*/
+    /*top: 5px;*/
+    /*right: 25px;*/
+	margin-left: 8px;
+	margin-bottom: -1px;
 }
 .main-menu__link-arrow {
 	width: 60px;
@@ -190,9 +192,10 @@ a.main_menu_top.has_sub:after {
     border: 4px solid transparent;
     border-bottom: 4px solid #138DCD;
     display: inline-block;
-    position: absolute;
-    top: 0px;
-    right: 25px;
+    /*position: absolute;*/
+    /*top: 0px;*/
+    /*right: 25px;*/
+	margin-bottom: 3px;
 }
 .main_menu_submenu_overlay:hover {
 	display: block;
