--- a/wp-content/themes/aigi/assets/css/landing-page-styles.css
+++ b/wp-content/themes/aigi/assets/css/landing-page-styles.css
@@ -151,6 +151,9 @@
     line-height: 19px;
     letter-spacing: 0.05em;
 }
+.sitemap-page h1{
+    margin-top: 45px;
+}
 @media (max-width: 992px) {
     .facetwp-facet-landing_event_type .facetwp-radio {
         padding: 12px 12px;
@@ -222,5 +225,8 @@
     /*Map*/
     .landing__filter-map {
         height: 522px;
+    }
+    .sitemap-page h1{
+        margin-top: 45px;
     }
 }
