--- a/wp-content/themes/aigi/assets/css/sponsor-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/sponsor-block-styles.css
@@ -54,7 +54,7 @@
     .sponsor-block-content {
         padding: 20px 0px 20px 0px;
     }
-    .sponsor-block-wrapper.content-wrapper.wrapper-1245 {
-        padding: 0;
-    }
+    /*.sponsor-block-wrapper.content-wrapper.wrapper-1245 {*/
+    /*    padding: 0;*/
+    /*}*/
 }
