Upcoming events block - fixed paddings

--- a/wp-content/themes/aigi/assets/css/upcoming-events-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/upcoming-events-block-styles.css
@@ -58,8 +58,8 @@
     .event-block-wrapper .post-tile__wrap.event .post-tile__content-header {
         margin-bottom: 10px;
     }       
-    .event-block-section .content-wrapper.wrapper-1245 {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
+    /*.event-block-section .content-wrapper.wrapper-1245 {*/
+    /*    padding-left: 0px;*/
+    /*    padding-right: 0px;*/
+    /*}*/
 }
