--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -18,7 +18,7 @@
 @import 'single-event-styles.css';
 @import 'landing-page-styles.css';
 @import 'popup-styles.css';
-@import 'admin-styles.css';
+/*@import 'admin-styles.css';*/
 @import '404-page-syles.css';
 @import 'form-block-styles.css';
 @import 'upcoming-events-block-styles.css';
